--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -36,6 +36,126 @@
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ prompt })
                 });
+                if (!response.ok) {
+                    throw new Error(`HTTP error! Status: ${response.status}`);
+                }
+                const graph = await response.json();
+                data.nodes.clear();
+                data.edges.clear();
+                data.nodes.update(graph.nodes.map(node => ({
+                    id: node.id,
+                    label: `${node.name} (${node.role}, ${node.ego_state}, mat ${node.maturity})`
+                })));
+                data.edges.update(graph.links.map(edge => ({
+                    from: edge.source,
+                    to: edge.target,
+                    label: `${edge.role} (${edge.light_shadow}, ${edge.polarity})`
+                })));
+            } catch (error) {
+                console.error('Error:', error);
+                alert('Failed to add to model');
+            }
+        }
+    </script>
+</body>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Polarity & Maturity Model</title>
+    <script src="https://unpkg.com/vis-network@9.1.2/standalone/umd/vis-network.min.js"></script>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 20px; }
+        #graph { width: 100%; height: 400px; border: 1px solid #ccc; }
+        textarea { width: 100%; height: 100px; margin: 10px 0; }
+        button { padding: 10px 20px; }
+    </style>
+</head>
+<body>
+    <h1>Polarity & Maturity Model</h1>
+    <textarea id="prompt" placeholder="Enter prompt, e.g., 'Add shadow polarity between AI Startup (Victim, Adapted Child, mat 2) and Ethics Board (Persecutor, Controlling Parent, mat 3)'"></textarea>
+    <button onclick="submitPrompt()">Submit</button>
+    <div id="graph"></div>
+
+    <script>
+        const container = document.getElementById('graph');
+        const data = { nodes: new vis.DataSet([]), edges: new vis.DataSet([]) };
+        const options = {
+            nodes: { shape: 'dot', size: 20, font: { size: 14 } },
+            edges: { arrows: 'to', font: { size: 12 } },
+            physics: { enabled: true }
+        };
+        const network = new vis.Network(container, data, options);
+
+        async function submitPrompt() {
+            const prompt = document.getElementById('prompt').value;
+            try {
+                const response = await fetch('/add', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ prompt })
+                });
+                if (!response.ok) {
+                    throw new Error(`HTTP error! Status: ${response.status}`);
+                }
+                const graph = await response.json();
+                data.nodes.clear();
+                data.edges.clear();
+                data.nodes.update(graph.nodes.map(node => ({
+                    id: node.id,
+                    label: `${node.name} (${node.role}, ${node.ego_state}, mat ${node.maturity})`
+                })));
+                data.edges.update(graph.links.map(edge => ({
+                    from: edge.source,
+                    to: edge.target,
+                    label: `${edge.role} (${edge.light_shadow}, ${edge.polarity})`
+                })));
+            } catch (error) {
+                console.error('Error:', error);
+                alert('Failed to add to model');
+            }
+        }
+    </script>
+</body>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Polarity & Maturity Model</title>
+    <script src="https://unpkg.com/vis-network@9.1.2/standalone/umd/vis-network.min.js"></script>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 20px; }
+        #graph { width: 100%; height: 400px; border: 1px solid #ccc; }
+        textarea { width: 100%; height: 100px; margin: 10px 0; }
+        button { padding: 10px 20px; }
+    </style>
+</head>
+<body>
+    <h1>Polarity & Maturity Model</h1>
+    <textarea id="prompt" placeholder="Enter prompt, e.g., 'Add shadow polarity between AI Startup (Victim, Adapted Child, mat 2) and Ethics Board (Persecutor, Controlling Parent, mat 3)'"></textarea>
+    <button onclick="submitPrompt()">Submit</button>
+    <div id="graph"></div>
+
+    <script>
+        const container = document.getElementById('graph');
+        const data = { nodes: new vis.DataSet([]), edges: new vis.DataSet([]) };
+        const options = {
+            nodes: { shape: 'dot', size: 20, font: { size: 14 } },
+            edges: { arrows: 'to', font: { size: 12 } },
+            physics: { enabled: true }
+        };
+        const network = new vis.Network(container, data, options);
+
+        async function submitPrompt() {
+            const prompt = document.getElementById('prompt').value;
+            try {
+                const response = await fetch('/add', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ prompt })
+                });
                 const graph = await response.json();
                 data.nodes.update(graph.nodes.map(node => ({
                     id: node.id,
