--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Polarity & Maturity Model</title>
-  <!-- Bootstrap CSS for tooltips and modal -->
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Vis.js CSS -->
-  <link href="https://unpkg.com/vis-network@9.1.2/dist/vis-network.min.css" rel="stylesheet">
+  <!-- Vis.js CSS (working CDN) -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis-network.min.css" rel="stylesheet">
   <!-- Custom Styles -->
   <style>
     body.light { background-color: #ffffff; color: #000000; }
@@ -79,7 +79,7 @@
   </div>
 
   <!-- Scripts -->
-  <script src="https://unpkg.com/vis-network@9.1.2/dist/vis-network.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis-network.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     // Initialize tooltips
@@ -114,7 +114,7 @@
       prompt.value = select.value;
     }
 
-    // Form submission
+    // Form submission with increased timeout
     document.getElementById('prompt-form').addEventListener('submit', function(e) {
       e.preventDefault();
       var prompt = document.getElementById('prompt').value;
@@ -129,10 +129,13 @@
       fetch('/add', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ prompt: prompt })
+        body: JSON.stringify({ prompt: prompt }),
+        timeout: 60000  // Increase to 60s to avoid browser timeout
       })
       .then(response => {
-        if (!response.ok) throw new Error('Invalid input');
+        if (!response.ok) {
+          return response.json().then(errData => { throw errData; });
+        }
         return response.json();
       })
       .then(data => {
@@ -152,7 +155,7 @@
         document.getElementById('spinner').style.display = 'none';
         document.getElementById('alert-placeholder').innerHTML =
           '<div class="alert alert-danger alert-dismissible fade show" role="alert">' +
-          'Error generating graph. Please try again.' +
+          `Error generating graph: ${error.error || error.message || 'Unknown error'}` +
           '<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>';
       });
     });
